# speech-to-text-master-plan-

./: .coveragerc  .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  COMMANDS.md  CONFIDENCE_SCORING_IMPLEMENTATION.md  Dockerfile  FEEDBACK_STATUS_UPDATE_IMPLEMENTATION.md  FUZZY_MATCHING_LOGGING_IMPLEMENTATION.md  FUZZY_MATCHING_TESTS_SUMMARY.md  GPT_CLEANUP_TESTS_IMPLEMENTATION.md  HOW_IT_WORKS.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_QUICKSTART.md  INTEGRATION_TESTS_SUMMARY.md  LEXICON_API_IMPLEMENTATION.md  LEXICON_CLEANUP_SUMMARY.md  LEXICON_ENDPOINTS_README.md  LEXICON_IMPLEMENTATION_SUMMARY.md  LEXICON_REPLACEMENT_IMPLEMENTATION.md  LEXICON_VALIDATION_IMPLEMENTATION_SUMMARY.md  MIGRATION_SETUP.md  Makefile  OPENAPI_DOCUMENTATION.md  OPENAPI_IMPLEMENTATION_SUMMARY.md  POST_PROCESSING_PIPELINE_README.md  QUICKSTART.md  README.md  README_WORKER.md  SETUP_COMPLETE.md  STORAGE_README.md  TASK_COMPLETION_SUMMARY.md  TESTING.md  TESTING_GUIDE.md  TESTING_PIPELINE.md  TESTING_QUICKSTART.md  (+51 more)
.claude/: settings.local.json
.github/workflows/: integration-tests.yml.example  tests.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_lexicon_id_replacement.py  003_add_feedback_fields.py  003_add_feedback_status_confidence.py  004_add_admin_role.py  351493e4ddc6_add_confidence_scoring_fields.py  ad899023acc6_add_processed_text_field.py
app/: DATABASE_README.md  __init__.py  auth.py  config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  redis_client.py
app/api/: admin.py  exceptions.py  health.py
app/api/endpoints/: README.md  feedback.py  jobs.py  transcription.py
app/config/: __init__.py  settings.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  api_key.py  feedback.py  job.py  lexicon.py  lexicon_term.py
app/routers/: lexicons.py  lexicons_example.py  transcription.py
app/schemas/: __init__.py  errors.py  feedback.py  jobs.py  lexicon.py  lexicons.py  transcription.py
app/services/: LEXICON_SERVICE_README.md  LEXICON_VALIDATOR_README.md  POST_PROCESSING_README.md  __init__.py  api_key_service.py  feedback_service.py  job_service.py  lexicon_service.py  lexicon_validator.py  numeral_handler.py  openai_service.py  postprocessing_service.py  queue.py  storage.py  text_cleanup.py
app/utils/: database.py  file_parsers.py  logging.py
app/workers/: README.md  __init__.py  transcription_worker.py
docs/: feedback-workflow.md  testing.md
examples/: basic_usage.py  worker_example.py
lexicons/: persian_radiology_comprehensive.csv
scripts/: run_tests.sh
tests/: FIXTURES_IMPLEMENTATION_SUMMARY.md  QUICKSTART_FIXTURES.md  README.md  conftest.py  test_fixtures_example.py  test_openai_service.py
tests/fixtures/: README.md  lexicons.json
tests/fixtures/audio/: README.md  generate_test_audio.py
tests/integration/: README.md  conftest.py  test_api_health.py  test_auth_and_rate_limiting.py  test_feedback_workflow.py  test_helpers.py  test_lexicon_management.py  test_transcription_workflow.py
tests/mocks/: openai_mock.py  redis_mock.py
tests/unit/: test_auth.py  test_fixtures_example.py  test_gpt_cleanup.py  test_lexicon.py  test_numeral_handler.py  test_postprocessing_service.py  test_text_cleanup.py
tests/utils/: factories.py
