[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stt-service"
version = "0.1.0"
description = "Speech-to-text prototype using OpenAI API with multi-language support and custom lexicon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web Framework - FastAPI for building REST APIs with automatic OpenAPI documentation
    "fastapi>=0.104.0",
    # ASGI Server - Uvicorn for running FastAPI application
    "uvicorn[standard]>=0.24.0",
    
    # Database - SQLAlchemy ORM for database interactions
    "sqlalchemy>=2.0.0",
    # Database Migrations - Alembic for managing database schema changes
    "alembic>=1.12.0",
    # PostgreSQL Driver - psycopg2-binary for PostgreSQL connectivity
    "psycopg2-binary>=2.9.9",
    
    # Cache/Queue - Redis client for caching and job queue management
    "redis>=5.0.0",
    
    # HTTP Client - httpx for making async HTTP requests to OpenAI API
    "httpx>=0.25.0",
    
    # Configuration - Pydantic for data validation and settings management
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # File Upload - python-multipart for handling multipart/form-data file uploads
    "python-multipart>=0.0.6",
    
    # Environment Variables - python-dotenv for loading .env files
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing - pytest framework for unit and integration testing
    "pytest>=7.4.0",
    # Async Testing - pytest-asyncio for testing async code
    "pytest-asyncio>=0.21.0",
    # Code Coverage - pytest-cov for measuring test coverage
    "pytest-cov>=4.1.0",
    # Code Formatting - black for code formatting
    "black>=23.11.0",
    # Linting - ruff for fast Python linting
    "ruff>=0.1.5",
    # Type Checking - mypy for static type checking
    "mypy>=1.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
